--- a/FormalRPG/FormalRPG/Components/Layout/NavMenu.razor
+++ b/FormalRPG/FormalRPG/Components/Layout/NavMenu.razor
@@ -19,14 +19,26 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="character">
+                <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Character
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="quests">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Quest Board
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="upgrades">
+                <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Upgrades
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="shop">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Shop
             </NavLink>
         </div>
 
