organizing, formatting, modeling

--- a/FormalRPG/FormalRPG.Client/Pages/CharacterProfile.razor
+++ b/FormalRPG/FormalRPG.Client/Pages/CharacterProfile.razor
@@ -1,6 +1,6 @@
 ﻿@page "/character"
-@using FormalRPG.Data
-@attribute [StreamRendering]
+@using FormalRPG.Client.ViewModels
+@rendermode InteractiveAuto
 
 <PageTitle>Character</PageTitle>
 
