--- a/FormalRPG/FormalRPG.Client/Pages/QuestBoard.razor
+++ b/FormalRPG/FormalRPG.Client/Pages/QuestBoard.razor
@@ -1,5 +1,6 @@
 ﻿@page "/quests"
-@using FormalRPG.Data
+@using FormalRPG.Client.ViewModels
+@rendermode InteractiveAuto
 
 <MudText Typo="Typo.h1" Class="px-6">Quests</MudText>
 
